# WndDesign

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WndDesign.sln
Test/: BarLayoutTest.h  CMakeLists.txt  DesktopFrameTest.h  EditBoxTest.h  FlowLayoutTest.cpp  FlowLayoutTest.h  ImageBoxTest.h  ListLayoutTest.h  OverlapLayoutTest.cpp  OverlapLayoutTest.h  ScrollBoxTest.h  ScrollFrameTest.h  SplitLayoutTest.h  TabViewTest.h  Test.vcxproj  Test.vcxproj.filters  TextBoxTest.cpp  TextBoxTest.h  test.cpp
WndDesign/: CMakeLists.txt  WndDesign.vcxproj  WndDesign.vcxproj.filters
WndDesign/common/: array_vector_selector.h  core.h  coroutine.h  function_traits.h  reversion_wrapper.h  tuple_helper.h  uncopyable.h  unicode_helper.cpp  unicode_helper.h
WndDesign/control/: Button.h  EditBox.cpp  EditBox.h  ImageBox.h  Placeholder.h  Scrollbar.h  TextBox.h
WndDesign/figure/: bitmap.cpp  bitmap.h  color.h  desktop_layer.cpp  desktop_layer.h  desktop_wnd_layer.cpp  desktop_wnd_layer.h  figure.cpp  figure.h  figure_queue.h  image.cpp  image.h  layer.cpp  layer.h  shape.cpp  shape.h  text_block.cpp  text_block.h  tiled_layer.h
WndDesign/frame/: BackgroundFrame.h  BorderFrame.h  CenterFrame.h  ClipFrame.h  DesktopFrame.cpp  DesktopFrame.h  DesktopWndFrame.cpp  DesktopWndFrame.h  FixedFrame.h  InnerBorderFrame.h  LayerFrame.cpp  LayerFrame.h  MarginFrame.cpp  MarginFrame.h  MaxFrame.h  MinFrame.h  MinMaxFrame.h  MultiViewFrame.h  OverlapFrame.cpp  ScaleFrame.h  (+7 more)
docs/: code-structure.md  concepts.md  develop-guide.md  history.md  implementation.md
(+124 files in other folders)
